--- a/static/main.css
+++ b/static/main.css
@@ -1,17 +1,37 @@
-/* this makes font sizes responsive to the changes in viewport width */
+ /* this is for the mint-coloured custom scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 8px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
 
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #99ffcc;
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4);
+}
+/* end custom scrollbar */
 /*
-
 *{
 font-size: 2.7vw;
 font-size: 2.7vh;
 }
-
+*/
+/* this makes font sizes responsive to the changes in viewport width */
 @media screen and (min-width: 600px) {
   * {
      font-size: 16px;
   }
 }
+
 */
 @media screen and (min-width: 320px) {
   body {
@@ -23,12 +43,18 @@ font-size: 2.7vh;
     font-size: 22px;
   }
 }
+@media screen and (min-width: 2000px) {
+  body {
+    font-size: 32px;
+  }
+}
+
 /* end responsive font sizes */
 
 body{
-font-size: 16px;
-font-family: Quenda-Medium;
-background: #253d52;
+    font-size: 16px;
+    font-family: Quenda-Medium;
+    background: #253d52;
 }
 
 /* checkout container */
@@ -75,7 +101,7 @@ background: #253d52;
     color: white;
     background-color: #253d52;
     border-color: #253d52;
-      transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 /* end of navbar button styles */
 .content-section {
@@ -126,13 +152,13 @@ a.article-title:hover {
     margin-top: 20px;
     }
 
-#signup{
-    border:5px solid black;
-    border-radius:10px;
-    width:800px;
-    padding:50px;
+.signup, .signin{
+    border-radius: 10px;
+    width: 400px;
+    padding: 30px;
+    padding-bottom: 50px;
     margin: auto;
-    margin-top:100px;
+    margin-top: 100px;
     margin-bottom: 100px;
 }
 
@@ -214,7 +240,7 @@ text-align: center;
     border: 2px solid grey;
     border-radius: 10px;
     padding: 30px;
-        margin: 30px;
+    margin: 20px;
     margin-bottom: 100px;
     }
 /* end checkout stylings */
