--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container" id="signup" action="{{url_for('login')}}">
+    <form method="post" class="swoy-container signin" action="{{url_for('login')}}">
         {{ form.csrf_token }}
         <div class="form-group col">
             <h2>Login</h2>
@@ -23,7 +23,7 @@
             <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the email or password is wrong.</p>
         {% endif %}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign In</button>
         </div>
     </form>
 
