--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container" id="signup" action="{{url_for('signup')}}">
+    <form method="post" class="swoy-container signup" action="{{url_for('signup')}}">
         {{ form.csrf_token }}
         <div class="form-group col">
             <h2>Sign up</h2>
@@ -26,7 +26,7 @@
             {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
         </div>
     </form>
 
